No ticket: Fix two dark mode nits reported by foxfooder (#87)
This fixes the "in use" label in dark mode and changes the background
color of the popup panel in darkmode to match Firefox.

--- a/src/ui/variables.css
+++ b/src/ui/variables.css
@@ -72,7 +72,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --panel-bg-color: #2b2a33;
+    --panel-bg-color: #1e1e1e;
     --border-color: lch(from var(--panel-bg-color) calc(l + 15) c h);
     --text-secondary-color: rbga(255, 255, 255, 0.6);
     --text-color-primary: #ffffff;
